--- a/frontend/src/components/carousel/ProductCarousel.scss
+++ b/frontend/src/components/carousel/ProductCarousel.scss
@@ -1,32 +1,14 @@
-/* ProductCarousel.scss */
-
 .product-carousel {
-    margin: 20px;
-  }
+  justify-content: center;
+  margin: 20px;
+  align-items: center;
   
-  .product-item {
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .product-item img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .product-item h3 {
-    font-size: 1.2em;
-    margin: 10px 0;
-  }
-  
-  .product-item p {
-    font-size: 1em;
-    color: #555;
-  }
-  
-  .product-item .price {
-    font-size: 1.1em;
-    color: #000;
-    font-weight: bold;
-  }
-  
+}
+
+
+.product-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
