--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -1,27 +1,31 @@
+.home-section {
+  background-color: gold;
+}
+
 .infoboxes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    //   margin-right: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  //   margin-right: 5px;
+}
+.infobox {
+  width: 23rem;
+  height: auto;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  //   margin-right: 2rem;
+  display: flex;
+  cursor: pointer;
+
+  .icon {
+    width: 35%;
   }
-  .infobox {
-    width: 23rem;
-    height: auto;
-    border: 1px solid #ccc;
-    padding: 1rem;
-    //   margin-right: 2rem;
-    display: flex;
-    cursor: pointer;
-  
-    .icon {
-      width: 35%;
-    }
-    .text {
-      h4 {
-        //   color: #aaa;
-        font-size: 1.8rem;
-        font-weight: 300;
-      }
+  .text {
+    h4 {
+      //   color: #aaa;
+      font-size: 1.8rem;
+      font-weight: 300;
     }
   }
+}
