--- a/frontend/src/components/header/Header.module.scss
+++ b/frontend/src/components/header/Header.module.scss
@@ -227,3 +227,13 @@
     height: 2px;
     background-color: #fff;
   }
+
+  .fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    background-color: #333; /* Adjust the background color as needed */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow effect */
+  }
+  
